--- a/client/src/styles/layout/_navbar.scss
+++ b/client/src/styles/layout/_navbar.scss
@@ -18,6 +18,7 @@
   position: fixed;
   height: 60px;
   box-shadow: 0 0 10px $color-black;
+  z-index: 999;
   h2 {
     width: 73%;
     text-align: left;
